(wip) FINALLY FIXED LAYOUT SHIFT (THX CHROME)

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,12 @@
 :root {
   --text-color: 255, 255, 255;
   --background-color: 0, 0, 0;
+  overscroll-behavior: none;
+}
+
+html {
+  scrollbar-gutter: stable;
+  overscroll-behavior: none;
 }
 
 body {
@@ -12,6 +18,7 @@ body {
   background: rgb(var(--background-color));
   font-weight: 500;
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 @layer utilities {
